2011-05-02 Mike Marciniszyn <mike.marciniszyn@intel.com>
        * Tag 1.5.3-11
        * IB/qib: MADs should return failure with misset mkeys
        * IB/qib: correct ordering of reregister vs. port active event
2011-02-14 Mike Marciniszyn <mike.marciniszyn@qlogic.com>
        * Tag 1.5.3-10
        * IB/qib: Hold links until tuning data is available
        * IB/qib: Fix issue with link states and QSFP cables
        * IB/qib: Fix over-scheduling of QSFP work
        * IB/qib: Fix qib driver mkey lease timeout handling
        * IB/qib: Default some module parameters optimally
2011-02-02 Mike Marciniszyn <mike.marciniszyn@qlogic.com>
        * Tag 1.5.3-9
        * IB/qib: Change driver default for rcvhdrpoll and pio_avail_bits
        * IB/qib: Avoid filtering lid on SMA portinfo
2011-12-12 Mike Marciniszyn <mike.marciniszyn@qlogic.com>
        * Tag 1.5.3-8
        * IB/qib: fix drop counter for ud packets
2011-12-02 Mike Marciniszyn <mike.marciniszyn@qlogic.com>
        * Tag 1.5.3-7
        * IB/qib: Correct nfreectxts for multiple HCAs
2011-11-02 Mike Marciniszyn <mike.marciniszyn@qlogic.com>
        * Tag 1.5.3-6
	* IB/qib: Fix panic in RC error flushing logic
2011-10-14 Mike Marciniszyn <mike.marciniszyn@qlogic.com>
        * Tag 1.5.3-5
	* IB/qib: handle kernels that export __get_user_pages()
2011-08-09 Mike Marciniszyn <mike.marciniszyn@qlogic.com>
        * Tag 1.5.3-4
        * IB/qib: Correct byte swap issue in PMA packet processing
        * IB/qib: defer hca error events to tasklet
        * IB/qib: Optimize RC/UC code by IB operation
        * IB/qib: decode path mtu optimization
        * IB/qib: Eliminate divide/mod in converting idx to egr buf pointer
        * IB/qib: qpn lookup optimizations
        * IB/qib: precompute timeout jiffies to optimize latency
        * IB/qib: memcpy optimizations
        * IB/qib: remove s_lock around header validation
        * IB/qib: Adjust to use cpumask_weight() and cpumask_first()