@@ -2,6 +2,7 @@
         * Tag 1.5.3-11
         * IB/qib: MADs should return failure with misset mkeys
         * IB/qib: correct ordering of reregister vs. port active event
+        * IB/qib: Change driver default for wc_pat to 2 for cross CPU inconsistencies
 2011-02-14 Mike Marciniszyn <mike.marciniszyn@qlogic.com>
         * Tag 1.5.3-10
         * IB/qib: Hold links until tuning data is available
